# lightning_template

./: .env.template  .gitignore  LICENSE.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
outdated/: README.md  main.py
outdated/src/: config.py  log.py  sweep.yaml
outdated/src/helpers/: csv_file_manager.py  decorators.py  menu.py  torch_inference.py
outdated/src/model_training/: base_model.py  data_module.py  lightning_manager.py  mnistmodel.py  trainer.py
resources/: lightning_doc.md
src/: __init__.py  config.py  log.py  sweep.yaml
src/helpers/: __init__.py  contexts.py  csv_file_manager.py  decorators.py  menu.py  torch_inference.py
src/lightning_template/: __init__.py  __main__.py  base_model.py  config.py  data_module.py  lightning_manager.py  mnist_model.py  settings.py  trainer.py  wandb_manager.py
src/model_training/: __init__.py  base_model.py  data_module.py  lightning_manager.py  mlp.py  mnistmodel.py  trainer.py
src/utils/: try_except.py
tests/test_utils/: test_try_except.py
