[project]
name = "lightning-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "pierre"}
]
requires-python = ">=3.11"
dependencies = [
    "lightning<2.5.0",
    "pedros>=0.0.5",
    "pydantic-settings>=2.8.1",
    "rich<14.0.0",
    "torch<2.6.0",
    "torchvision<0.21.0",
    "wandb>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
